# my_d2l_codes

./: README.md  main.py  pyproject.toml
cifar_10/: data_set.py  predict.py  train.py
classify_leaves/: data_set.py  predict.py  train.py
house_price/: data_processing.py  predict.py  pytorch_train.py  xgboost_train.py
house_price/model/: pytorch_model.pth
house_price/processed_data/: test_features.csv  train_features.csv  train_features.pt  train_labels.csv  train_labels.pt
house_price/result/: submission.csv
pytorch/chapter_computer-vision/: anchor.ipynb
pytorch/chapter_convolutional-modern/: alexnet.ipynb  test.ipynb
pytorch/chapter_convolutional-neural-networks/: conv-layer.ipynb  lenet.py
pytorch/chapter_deep-learning-computation/: model-construction.ipynb
pytorch/chapter_linear-networks/: image-classification-dataset.ipynb  linear-regression-concise.ipynb  linear-regression-scratch.ipynb  linear.py  softmax-regression-concise.ipynb  softmax-regression-scratch.ipynb  softmax.py
pytorch/chapter_multilayer-perceptrons/: house_price.py  kaggle-house-price.ipynb  mlp-concise.ipynb  mlp-scratch.ipynb  mlp.py  submission.csv
pytorch/chapter_preliminaries/: linear-algebra.ipynb  ndarray.ipynb  pandas.ipynb  test.ipynb
work/: data_processing.py  k_fold_validation.py  train_and_predict.py
work/processed_data/: test_features.pt  test_processed.csv  train_processed.csv
work/result/: submission.csv
